Updated till 20.Installing Angular Material

--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,6 +1,10 @@
-<!-- <textarea rows="6" [value]="newPost" #postInput></textarea> -->
-<textarea rows="6" [(ngModel)]="enteredValue"></textarea>
-<hr>
-<!-- <button (click)="onAddPost(postInput)">Save Post</button> -->
-<button (click)="onAddPost()">Save Post</button>
+<mat-card>
+  <mat-form-field>
+    <!-- <textarea rows="6" [value]="newPost" #postInput></textarea> -->
+    <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
+  </mat-form-field>
+  <!-- <button (click)="onAddPost(postInput)">Save Post</button> -->
+<button mat-raised-button color="primary" (click)="onAddPost()">Save Post</button>
+</mat-card>
+
 <p>{{newPost}}</p>
